@@ -158,7 +158,7 @@ void VG_(sigframe_create)( ThreadId tid,
   sp = sp_top_of_frame - sizeof(struct rt_sigframe);
 
   tst = VG_(get_ThreadState)(tid);
-  if (! ML_(sf_extend_stack)(tst, sp, sizeof(struct rt_sigframe)))
+  if (! ML_(sf_maybe_extend_stack)(tst, sp, sizeof(struct rt_sigframe), flags))
     return;
 
   vg_assert(VG_IS_8_ALIGNED(sp));
