@@ -1,0 +1,2 @@
+prog: pthread-stack
+vgopts: -q
